# Luxunda

./: .gitignore  .replit  CHANGELOG.md  DISCORD_SETUP.md  LICENSE  LUXDB_MVP_SUMMARY.md  MANIFEST.in  README.md  README_ASTRAL_BEINGS.md  README_ENTERPRISE.md  REPOSITORY_STRUCTURE.md  STANDARD_DATA_FETCHING.md  VERSION_1.0.0_MANIFEST.md  admin_kernel_server.py  app_v2_test.db  archive_system.py  cleanup_repository.py  database_cleanup.py  demo_alias_management.py  demo_being_communication.py  demo_complete_system.py  demo_discord_beings.py  demo_dynamic_module.py  demo_elegant_api.py  demo_event_system.py  demo_function_delegation.py  demo_funkcje_soul_test.py  demo_get_or_create.py  demo_gpt_specialist.py  demo_instrukcje_uzytkownika.py  demo_landing.py  demo_lazy_soul_execution.py  demo_lux_assistant.py  demo_lux_onboarding.py  demo_module_system.py  demo_openai_soul_test.py  demo_primitive_beings.py  demo_registry_delegation.py  demo_relations_system.py  demo_simple_system.py  (+52 more)
ai/: ai_brain.py  embendding.py  hybrid_ai_system.py  openai_function_caller.py
app/: __init__.py
app_v2/: README.md  __init__.py  main_test.py
archive/: demo_landing.py  luxdb_mvp_demo.py  main_app.py  main_test.py  run_function_calling_tests.py  test_openai_integration.py
astral_beings/: __init__.py  core.py  examples.py  generators.py  templates.py
core/: genetics_generator.py  globals.py  parser_table.py
database/: parser_table.py  postgre_db.py  soul_repository.py
docs/: INSTRUKCJE_UZYTKOWNIKA.md
examples/: advanced_usage.py  astral_beings_demo.py  being_evolution_example.py  (+7 more)
(+508 files in other folders)
