[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "asyncio",
    "asyncpg",
    "aiohttp",
    "aiohttp-cors",
    "python-socketio",
    "aiosqlite",
    "openai",
    "numpy",
    "scikit-learn"
]