[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "asyncio",
    "asyncpg",
    "aiohttp",
    "aiohttp-cors",
    "python-socketio",
    "aiosqlite",
    "openai>=1.0.0",
    "numpy",
    "scikit-learn",
    "aiofiles>=24.1.0",
    "pytest>=8.4.1",
    "socketio>=0.2.1",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
]
