[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "asyncio",
    "asyncpg",
    "aiohttp",
    "aiohttp-cors",
    "python-socketio",
    "aiosqlite",
    "openai>=1.0.0",
    "numpy",
    "scikit-learn",
    "aiofiles>=24.1.0",
    "pytest>=8.4.1",
    "socketio>=0.2.1",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "websockets>=15.0.1",
    "pydantic>=2.11.7",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "setuptools>=3.3",
]
